--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "compile": "npx hardhat compile",
     "clean": "npx hardhat clean",
     "deploy:nft": "npx hardhat run scripts/deploy-nft.ts --network hederaTestnet",
-    "deploy:escrow": "npx hardhat run scripts/deploy.ts --network hederaTestnet",
+    "deploy:escrow": "npx hardhat run scripts/deploy-escrow.ts --network hederaTestnet",
+    "run:post-deploy": "npx hardhat run scripts/post-deploy.ts --network hederaTestnet",
     "run:escrow": "npx hardhat run scripts/run-escrow.ts --network hederaTestnet",
     "run:nft": "npx hardhat run scripts/run-nft.ts --network hederaTestnet",
     "run:nft-collectible": "npx hardhat run scripts/run-nft-collectible.ts --network hederaTestnet",
